crates/milli/src/search/new/tests/snapshots/milli__search__new__tests__proximity__proximity_prefix_db-14.snap
---
source: milli/src/search/new/tests/proximity.rs
expression: "format!(\"{document_scores:#?}\")"
---
[
    [
        Proximity(
            Rank {
                rank: 4,
                max_rank: 4,
            },
        ),
    ],
    [
        Proximity(
            Rank {
                rank: 2,
                max_rank: 4,
            },
        ),
    ],
    [
        Proximity(
            Rank {
                rank: 1,
                max_rank: 4,
            },
        ),
    ],
    [
        Proximity(
            Rank {
                rank: 1,
                max_rank: 4,
            },
        ),
    ],
    [
        Proximity(
            Rank {
                rank: 1,
                max_rank: 4,
            },
        ),
    ],
    [
        Proximity(
            Rank {
                rank: 1,
                max_rank: 4,
            },
        ),
    ],
    [
        Proximity(
            Rank {
                rank: 1,
                max_rank: 4,
            },
        ),
    ],
    [
        Proximity(
            Rank {
                rank: 1,
                max_rank: 4,
            },
        ),
    ],
]
